<resources>
    <string name="app_name">FitMaster</string>
    <string name="register_account">Register Account</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="by_continuing">By continuing, you agree to the Terms of Use.</string>
    <string name="privacy_policy">Read our Privacy Policy.</string>
    <string name="welcome_back">Welcome Back to FitMaster</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="default_web_client_id">225543104014-pojsu2v0fs3kdisad5sbvi8qvfbb826k.apps.googleusercontent.com </string>
    <string name="date">MM/DD/YYYY</string>
    <string name="title_activity_profile">Profile</string>
    <string name="goals">Goals</string>
    <string name="whats_your_fitness_level">What\'s your fitness level?</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="what_s_your_goal">What\'s your goal?</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="gain_muscles">Gain Muscles</string>
    <string name="what_s_your_target_weight">What\'s your Target Weight?</string>
    <string name="save">Save</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="enter_weight_in_kg">Enter weight (kg)</string>
    <string name="kg">kg</string>
    <string name="dumbbell_bench_press">Dumbbell Bench Press</string>
    <string name="inclined_bench_press">Inclined Bench Press</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="rows">Rows</string>
    <string name="high_knees">High Knees</string>
    <string name="pushups">Pushups</string>
    <string name="bicycle_crunches">Bicycle Crunches</string>
    <string name="burpees">Burpees</string>
    <string name="jog">Jog</string>
    <string name="reps">reps</string>
    <string name="weight">Weight</string>
    <string name="fifteen_minutes">15:00</string>
    <string name="play">START</string>
    <string name="pause">PAUSE</string>
</resources>