<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvwRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/register_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/inter_semibold"
            android:importantForAutofill="no"
            android:hint="@string/full_name"
            android:inputType="text|textAutoComplete"
            android:padding="15dp"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/edtBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/inter_semibold"
            android:importantForAutofill="no"
            android:hint="@string/birthday"
            android:inputType="datetime|date"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress|textAutoComplete"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/inter_semibold"
            android:importantForAutofill="no"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:padding="15dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/blue_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvwAkready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/already_have_an_account"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tvwLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/login"
                android:textColor="@color/blue_button" />

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvwToS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/by_continuing"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvwToS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>