<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvwLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvwWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress|textAutoComplete"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:padding="15dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvwForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/blue_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:background="transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvwToS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/by_continuing"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvwToS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>